# Truss-Project

./: .env  main.py  py.pylintrc  pyproject.toml  requirements.txt  synthetic_data.py  synthetic_trusses.json  truss.py  truss_definitions.py
